@@ -1,5 +1,6 @@
 [tox]
 distshare={homedir}/.tox/distshare
+envlist=py26,py27,py31,py27-xdist,py25,py24
 
 [tox:hudson]
 distshare={toxworkdir}/distshare
@@ -14,6 +15,15 @@ deps=
     pexpect
 [testenv:py27]
 basepython=python2.7
+[testenv:py27-xdist]
+basepython=python2.7
+deps=
+    {distshare}/py-**LATEST**  
+    {distshare}/pytest-xdist-**LATEST**
+commands=
+  py.test -n3 --confcutdir=..  -rfsxX \
+        --junitxml={envlogdir}/junit-{envname}.xml --tools-on-path []
+
 [testenv:py26]
 basepython=python2.6
 [testenv:doc]
